--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for all branches and tags
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -26,4 +28,21 @@ jobs:
         run: npm install
 
       - name: Run ESLint
-        run: npm run lint
+        run: |
+          if [ ${{ github.event_name }} == 'pull_request' ]; then
+            # For pull requests, check files changed in the PR
+            CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -- '*.js' '*.ts' '*.jsx' '*.tsx')
+          else
+            # For pushes, check files changed in the last commit
+            CHANGED_FILES=$(git diff --name-only HEAD^ HEAD -- '*.js' '*.ts' '*.jsx' '*.tsx')
+          fi
+          
+          if [ -z "$CHANGED_FILES" ]; then
+            echo "No relevant files changed. Skipping lint."
+            exit 0
+          fi
+          
+          echo "Files to lint:"
+          echo "$CHANGED_FILES"
+          echo "Running ESLint..."
+          npx eslint $CHANGED_FILES
