--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-c8": "^0.33.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -39,6 +40,6 @@
     "jsdom": "^25.0.0",
     "typescript": "^5.5.4",
     "vite": "^5.1.4",
-    "vitest": "^2.0.5"
+    "vitest": "^0.30.0"
   }
 }
