Add tests for workflow testing

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ name: Lint Node.js App
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev, 'feature/*']
   pull_request:
     branches: [main]
 
