Add tests for workflow testing
Add tests for workflow testing

update lint.yml

update lint.yml

update lint.yml

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,9 +5,9 @@ name: Lint Node.js App
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev, 'feature/*']
   pull_request:
-    branches: [main]
+    branches: [main, dev]
 
 jobs:
   lint:
