--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [main, dev, 'feature/*']
   pull_request:
-    branches: [main]
+    branches: [main, dev]
 
 jobs:
   lint:
