--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+          token: ${{ secrets.PAT_TOKEN }}
+          
       - name: Configure Git
         run: |
           git config user.name github-actions
@@ -39,7 +40,7 @@ jobs:
           git merge --abort
           exit 1)
 
-      - name: Push changes
+      - name: Push changes to dev
+        if: success()
         run: |
-          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}
           git push origin dev
